Fix login/signin page reshifting with errors

--- a/app/assets/stylesheets/login_page.css
+++ b/app/assets/stylesheets/login_page.css
@@ -4,7 +4,7 @@
     border: 1px solid #e6e6e6;
     background: white;
     width: 350px;
-    height: 385px;
+    height: 400px;
     margin-top: 12px;
     border-radius: 2px;
     align-items: stretch;
@@ -91,6 +91,15 @@
 }
 .login-errors {
     color: red;
+    list-style: none;
+    padding-left: 0px;
+}
+
+.login-errors-ul {
+    height: 40px;
+    width: 100%;
+    text-align: left;
+    /* margin-left: 50px; */
 }
 
 .login-logo {
