--- a/app/assets/stylesheets/signup_page.css
+++ b/app/assets/stylesheets/signup_page.css
@@ -24,7 +24,7 @@
     padding: 10px 0;
     text-align: center;
     width: 350px;
-    /* margin-top: 75px; */
+    margin-top: 25px;
 }
 
 .signup-page {
@@ -40,7 +40,6 @@
 .form-header {
     display: flex;
     justify-content: space-around;
-    padding-bottom: 25px;
     width: 240px;
     margin-left: 50px;
     color: darkgrey;
@@ -57,4 +56,40 @@
 
 .strong {
     font-weight: bolder;
+}
+
+.signin-error {
+    text-align: left;
+    width: 250px;
+    height: 40px;
+    background-color: #ffe4e4;
+    padding-left: 5px;
+    text-overflow: ellipsis;
+    font-size: 14px;
+    margin: 3px;
+    border-radius: 3px;
+    border: 1px solid red;
+    box-sizing: border-box;
+}
+
+.signin-error::placeholder {
+    color: red;
+}
+
+.signin-errors-ul {
+    height: 40px;
+    width: 100%;
+    text-align: left;
+    margin-left: 50px;
+}
+
+.signin-page-right {
+    color: #262626;
+    justify-content: center;
+    max-width: 350px;
+    width: 100%;
+    flex-direction: column;
+
+    margin-right: 500px;
+    font-family: 'Roboto', sans-serif;
 }
